--- a/CST205_finalProj/templates/results-view.html
+++ b/CST205_finalProj/templates/results-view.html
@@ -16,37 +16,17 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <img src="{{ result.image }}" class="card-img-top" width="200" height="200"></img>
-                        <!--<img src="recipe-thumbnail" class="card-img-top" alt="...">{{ result.thumbnail }}</img>-->
                         <h5 class="card-title">{{ result.meal_name }}</h5>
-                        <!--<p class="card-text">{{ result.ingredients }}</p>-->
                         <a href="{{ url_for('detail', recipe_id=result['id']|string) }}" class="btn btn-primary">Read More</a>
-                        <!--<a href="{{ result.link }}" class="btn btn-primary">Read More</a>-->
+                        
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+        <a href="{{ url_for('home') }}">Take me home</a>
     </div>
 
     {{ bootstrap.load_js() }}
 </body>
 </html>
-<!--
-<div class="container">
-    ROW 1
-    <div class="row">
-
-      COLUMN 1
-      <div class="col-sm">
-      </div>
-
-      COLUMN 2
-      <div class="col-sm">
-      </div>
-
-      COLUMN 3
-      <div class="col-sm">
-      </div>
-    </div>
-</div>
--->
